--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -66,7 +66,7 @@
 	padding-left: 30px;
 }
 
-.card__duties li {
+.card__dutie {
 	font-size: 16px;
 	line-height: calc(20/16);
 	letter-spacing: -0.01em;
@@ -74,12 +74,12 @@
 	margin-bottom: 8px;
 }
 
-.card__duties li::marker {
+.card__dutie::marker {
 	content: "•  ";
-	color: var(--text);
+	color: var(--marker);
 }
 
-.card__duties li:last-child {
+.card__dutie:last-child {
 	margin-bottom: 0;
 }
 
