--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -36,6 +36,14 @@
 	backdrop-filter: blur(16px);
 }
 
+.header__row--light {
+	background: linear-gradient(to right, rgba(4, 4, 4, 0.4), rgba(16, 44, 43, 0.4));
+}
+
+.header__nav {
+	display: flex;
+}
+
 .header__list {
 	display: flex;
 	column-gap: 60px;
@@ -51,4 +59,50 @@
 
 .header__link--active {
 	border-bottom: 1px solid #FFFFFF;
+}
+
+/* подложка тогглера */
+.header__button {
+	margin-left: 60px;
+
+	order: 9;
+
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+
+	width: 51px;
+	height: 26px;
+	padding: 5px;
+
+	border-radius: 50px;
+	background-color: #272727;
+}
+
+/* белый кружок тогглера */
+.header__button::before {
+	content: '';
+
+	position: absolute;
+	top: 1px;
+	left: 1px;
+
+	display: block;
+	width: 24px;
+	height: 24px;
+
+	border-radius: 50%;
+	background-color: #FFFFFF;
+
+	transition: left 0.2s ease-in;
+}
+
+/* белый кружок тогглера но правее */
+.header__button--dark::before {
+	left: 26px;
+}
+
+/* иконки */
+.header__button-icon {
+	z-index: 9;
 }
