--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -18,10 +18,11 @@
 	padding: 32px 16px;
 	border: 1px solid var(--accent);
 	box-shadow: 0 0 5px var(--accent);
+	margin-bottom: 60px;
 }
 
 .info__title {
-	font-family: 'Helvetica Neue';
+	font-family: 'Helvetica Neue', sans-serif;
 	font-weight: 700;
 	font-size: 24px;
 	letter-spacing: 0.01em;
@@ -51,7 +52,7 @@
 
 .info__list li::marker {
 	content: "•  ";
-	color: var(--text);
+	color: var(--marker);
 }
 
 .info__wrapper span {
